--- a/src/interns/robert/index.html
+++ b/src/interns/robert/index.html
@@ -12,9 +12,11 @@
     </div>
     <div class="contentDiv">
         <p>
-            I am Robert Harkov. I have graduated in December but my big mistake is that during my degree
-            I have not been in software development internship as it was hard to decide what particular thing I am interested at
-            as in during university there are so many subjects and each of them are interesting in their own way.
+            I am Robert Harkov. I have graduated in December with Computer Science (master's) degree but my big mistake is that during my degree
+            I have not been in software development internship or any as it was hard to decide what particular thing I am interested at
+            as in during university there are so many subjects and each of them are interesting in their own way. After graduating I was unsure what I want to do
+            and I have learned a lot but I have not practiced it after semester ended in the real job which just made those learned material
+            fade away.
             Then I had a friend who did boot camp in my class and that idea sparked me of doing it as well as it could help me find my career path or direction.
         </p>
         <p>I want to learn/practice software development with many technologies like React, Redux, JavaScript and etc. There are many interesting technologies
